<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6DAF1"
    tools:context=".ui.QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wich_country_does_this_flag_represent"
            android:textColor="#8768F8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/flag_img_id"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/this_is_a_flag"
            android:src="@drawable/canada_flag" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="10">

            <ProgressBar
                android:id="@+id/progress_bar_id"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="9"
                android:max="10"
                android:progress="5"
                android:progressTint="#8768F8" />

            <TextView
                android:id="@+id/progress_note_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5_10"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/option_1_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_back_ground"
            android:gravity="center"
            android:text="@string/option1"
            android:textColor="#888888"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/option_2_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_back_ground"
            android:gravity="center"
            android:text="@string/option2"
            android:textColor="#888888"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/option_3_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_back_ground"
            android:gravity="center"
            android:text="@string/option3"
            android:textColor="#888888"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/option_4_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_back_ground"
            android:gravity="center"
            android:text="@string/option4"
            android:textColor="#888888"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sheck_answer_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#8768F8"
            android:text="@string/check"
            android:textSize="18sp"
            app:cornerRadius="8dp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>