<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_app_title_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_for_main_activity"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/please_entre_your_name"
                android:textSize="18sp"
                android:textStyle="normal" />
            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enter your name here!"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"

                />
            -->


            <EditText
                android:id="@+id/name_field_id"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_field_back_ground"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/start_btn_id"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#5D33F8"
                android:elevation="12dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="12dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>